--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -196,6 +196,10 @@
     100%
         margin-top: 550px
 
+@media (max-width: 930px)
+    .Main-title
+        line-height: 70px
+
 @media (max-width: 580px)
     .Main-title
         line-height: 70px
