--- a/figma/SOS/sass/sectionThree.sass
+++ b/figma/SOS/sass/sectionThree.sass
@@ -98,8 +98,28 @@
     display: none
 
 @media (max-width: 930px)
+    .SectionThree
+
+        min-height: 0
+
+    .S3-h1up-text
+        margin-left: 20px
+
+    .S3-h1main
+        margin-left: 20px
+
     .SOS-S3-container
         justify-content: flex-start
 
         .SOS-S3-wrapper
             padding: 10px
+
+@media (max-width: 700px)
+    .SOS-S3-wrapper
+        width: 100%
+
+    .S3-h1up-text
+        width: 100%
+
+    .S3-h1main
+        margin-left: 20px
