--- a/figma/SOS/sass/sectionThree.sass
+++ b/figma/SOS/sass/sectionThree.sass
@@ -100,7 +100,7 @@
 @media (max-width: 930px)
     .SectionThree
 
-        min-height: 0
+        min-height: max-content
 
     .S3-h1up-text
         margin-left: 20px
