--- a/css/style.css
+++ b/css/style.css
@@ -2660,170 +2660,7 @@ html:hover .spider {
     line-height: 30px;
   }
 }
-.SectionFive {
-  min-weight: 1000px;
-  min-height: 880px;
-  background-repeat: no-repeat;
-  display: block;
-  background-position: center;
-  background-size: contain;
-  position: relative;
-}
-
-.SOS-s5-wrapper {
-  display: flex;
-  justify-content: space-around;
-}
-
-.s5h1-up {
-  margin-top: 304px;
-  color: white;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 24px;
-}
-
-.s5h1-main {
-  margin-top: 20px;
-  color: white;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 80px;
-  line-height: 80px;
-  letter-spacing: 3px;
-}
-
-.s5h1-text {
-  margin-top: 20px;
-  color: white;
-  width: 430px;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 22px;
-  font-family: Open Sans;
-}
-
-.Read-more {
-  margin-top: 50px;
-  width: 260px;
-  height: 60px;
-  background: linear-gradient(#FFB548, #F3AF34);
-  border-radius: 4px;
-  cursor: pointer;
-  transition: 0.5s;
-}
-.Read-more:hover {
-  background: linear-gradient(#fc9804, #d39013);
-  border: 1.5px solid darkred;
-}
-.Read-more-text {
-  color: black;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 22px;
-  font-family: Open Sans;
-}
-
-.reviewsSOS {
-  position: relative;
-  width: 453px;
-  height: 183px;
-  background-color: #1a1a1b;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: 0.5s;
-}
-.reviewsSOS:hover {
-  border: 2px solid #FFB548;
-  transform: scale(1.05);
-}
-.reviewsSOS:hover .reviewsSOS-yellowCircle {
-  transform: translate(8px, 4px);
-}
-.reviewsSOS:hover .fa-twitter::before {
-  color: #179CF0;
-}
-.reviewsSOS-name {
-  position: absolute;
-  color: #FFB548;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 24px;
-  left: 109px;
-  top: 26px;
-  letter-spacing: 2px;
-}
-.reviewsSOS-subname {
-  position: absolute;
-  top: 47px;
-  left: 109px;
-  color: #5d5d5e;
-}
-.reviewsSOS-img {
-  position: absolute;
-  top: 11px;
-  left: 12px;
-  z-index: 1;
-}
-.reviewsSOS-img img {
-  width: 66px;
-  height: 66px;
-  border-radius: 50%;
-}
-.reviewsSOS-yellowCircle {
-  position: absolute;
-  top: 11px;
-  left: 12px;
-  width: 66px;
-  height: 66px;
-  background-color: #FFB548;
-  border-radius: 50%;
-  transition: 0.5s;
-}
-.reviewsSOS-social {
-  position: absolute;
-  top: 30px;
-  left: 414px;
-}
-.reviewsSOS-text {
-  position: absolute;
-  top: 103px;
-  left: 16px;
-  color: white;
-  width: 390px;
-  height: 60px;
-}
-.reviewsSOS-date {
-  margin-left: 16px;
-  margin-top: 151px;
-  color: #5d5d5e;
-}
-
-.reviewsSOS .fa-twitter::before {
-  font-size: 17px;
-  color: #5d5d5e;
-  transition: 0.5s;
-}
-
-.evan {
-  position: absolute;
-  top: 160px;
-  left: 970px;
-}
-
-.lada {
-  position: absolute;
-  top: 372px;
-  left: 824px;
-}
-
-.aaron {
-  position: absolute;
-  top: 608px;
-  left: 929px;
-}
-
+/** @import "../figma/SOS/sass/sectionFive" **/
 .SectionSix {
   min-weight: 1000px;
   min-height: 880px;
@@ -3025,6 +2862,195 @@ html:hover .spider {
     margin: 0 auto;
   }
 }
+.SectionFive {
+  min-weight: 1000px;
+  min-height: 880px;
+  background-repeat: no-repeat;
+  display: block;
+  background-position: center;
+  background-size: contain;
+  position: relative;
+}
+
+.SOS-s5-wrapper {
+  display: flex;
+  justify-content: space-around;
+}
+
+.s5h1-up {
+  margin-top: 304px;
+  color: white;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 24px;
+}
+
+.s5h1-main {
+  margin-top: 20px;
+  color: white;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 80px;
+  line-height: 80px;
+  letter-spacing: 3px;
+}
+
+.s5h1-text {
+  margin-top: 20px;
+  color: white;
+  width: 430px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  font-family: Open Sans;
+}
+
+.Read-more {
+  margin-top: 50px;
+  width: 260px;
+  height: 60px;
+  background: linear-gradient(#FFB548, #F3AF34);
+  border-radius: 4px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.Read-more:hover {
+  background: linear-gradient(#fc9804, #d39013);
+  border: 1.5px solid darkred;
+}
+.Read-more-text {
+  color: black;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  font-family: Open Sans;
+}
+
+.SOS-s5-right {
+  margin-top: 150px;
+}
+
+.evanSOS {
+  height: 183px;
+  width: 550px;
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px;
+}
+
+.LadaSOS {
+  height: 183px;
+  width: 550px;
+  display: flex;
+  justify-content: flex-start;
+  margin: 20px;
+}
+
+.AaronSOS {
+  height: 183px;
+  width: 550px;
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px;
+}
+
+.reviewsSOS {
+  position: relative;
+  width: 453px;
+  height: 183px;
+  background-color: #1a1a1b;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.5s;
+  overflow: hidden;
+}
+.reviewsSOS:hover {
+  border: 2px solid #FFB548;
+  transform: scale(1.05);
+}
+.reviewsSOS:hover .reviewsSOS-yellowCircle {
+  transform: translate(8px, 4px);
+}
+.reviewsSOS:hover .fa-twitter::before {
+  color: #179CF0;
+}
+.reviewsSOS-name {
+  display: inline;
+  position: absolute;
+  color: #FFB548;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 24px;
+  left: 109px;
+  top: 26px;
+  letter-spacing: 2px;
+}
+.reviewsSOS-subname {
+  position: absolute;
+  top: 47px;
+  left: 109px;
+  color: #5d5d5e;
+}
+.reviewsSOS-img {
+  position: absolute;
+  top: 11px;
+  left: 12px;
+  z-index: 1;
+}
+.reviewsSOS-img img {
+  width: 66px;
+  height: 66px;
+  border-radius: 50%;
+}
+.reviewsSOS-yellowCircle {
+  position: absolute;
+  top: 11px;
+  left: 12px;
+  width: 66px;
+  height: 66px;
+  background-color: #FFB548;
+  border-radius: 50%;
+  transition: 0.5s;
+}
+.reviewsSOS-social {
+  position: absolute;
+  top: 30px;
+  left: 414px;
+}
+.reviewsSOS-text {
+  position: absolute;
+  top: 103px;
+  left: 16px;
+  color: white;
+  width: 390px;
+  height: 60px;
+}
+.reviewsSOS-date {
+  margin-left: 16px;
+  margin-top: 151px;
+  color: #5d5d5e;
+}
+
+.reviewsSOS .fa-twitter::before {
+  font-size: 17px;
+  color: #5d5d5e;
+  transition: 0.5s;
+}
+
+/** 
+ * .evan
+ * position: absolute
+ * top: 160px
+ * left: 970px */
+/** .lada
+ * position: absolute
+ * top: 372px
+ * left: 824px **/
+/** .aaron
+ * position: absolute
+ * top: 608px
+ * left: 929px **/
 html {
   box-sizing: border-box;
 }
