--- a/sass/style.sass
+++ b/sass/style.sass
@@ -32,8 +32,9 @@
 @import "../figma/SOS/sass/sectionTwo"
 @import "../figma/SOS/sass/sectionThree"
 @import "../figma/SOS/sass/sectionFour"
-@import "../figma/SOS/sass/sectionFive"
+/** @import "../figma/SOS/sass/sectionFive" **/
 @import "../figma/SOS/sass/sectionSix"
+@import "../figma/SOS/sass/sectionFive-NEW"
 
 @import "../figma/ZEN/sass/ZenGlobal"
 @import "../figma/ZEN/sass/section1"
