--- a/figma/SOS/sass/sectionFive-NEW.sass
+++ b/figma/SOS/sass/sectionFive-NEW.sass
@@ -64,21 +64,21 @@
     width: 550px
     display: flex
     justify-content: flex-end
-    margin: 20px
+    margin: 30px
 
 .LadaSOS
     height: 183px
     width: 550px
     display: flex
     justify-content: flex-start
-    margin: 20px
+    margin: 30px
 
 .AaronSOS
     height: 183px
     width: 550px
     display: flex
     justify-content: flex-end
-    margin: 20px
+    margin: 30px
 
 .reviewsSOS
     position: relative
@@ -142,7 +142,7 @@
     &-social
         position: absolute
         top: 30px
-        left: 414px
+        right: 20px
 
     &-text
         position: absolute
@@ -162,18 +162,66 @@
     color: #5d5d5e
     transition: 0.5s
 
-/** 
- .evan
- position: absolute
- top: 160px
- left: 970px
+@media (max-width: 1100px)
+    .SOS-s5-wrapper
+        display: block
 
-/** .lada
- position: absolute
- top: 372px
- left: 824px **/
+    .SOS-s5-left
+        display: block
+        padding-top: 1px
 
-/** .aaron
- position: absolute
- top: 608px
- left: 929px **/
+        .s5h1-up
+            margin-top: 80px
+            text-align: center
+
+        .s5h1-main
+            text-align: center
+
+        .s5h1-text
+            padding-top: 20px
+            margin: 0 auto
+
+        .Read-more-inner
+            display: block
+            margin-top: 20px
+
+            .Read-more
+                display: block
+                margin: 0 auto
+
+    .SOS-s5-right
+        margin-top: 5px
+        display: flex
+        flex-direction: column
+        align-items: center
+
+@media (max-width: 750px)
+    .evanSOS
+        justify-content: center
+    .LadaSOS
+        justify-content: center
+
+    .AaronSOS
+        justify-content: center
+
+@media (max-width: 500px)
+
+    .s5h1-main
+        font-size: 50px
+        line-height: 55px
+
+    .s5h1-text
+        width: 90%
+        text-align: center
+
+    .reviewsSOS
+        width: 290px
+
+        &-name
+            width: 50%
+
+        &-subname
+            top: 70px
+
+        &-text
+            width: 90%
