--- a/figma/SOS/sass/sectionFive.sass
+++ b/figma/SOS/sass/sectionFive.sass
@@ -7,7 +7,7 @@
     background-size: contain
     position: relative
 
-.SOS-s5-wrapper
+.SOS-s5__wrapper
     display: flex
     justify-content: space-around
 
