--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -143,7 +143,7 @@
         background: linear-gradient(#fc9804, #d39013)
         border: 1.5px solid darkred
 
-    &-left
+    &__left
         position: absolute
         left: 16.39px
         top: 17.5px
@@ -151,12 +151,12 @@
         font-size: 16px
         font-weight: 700
 
-    &-center
+    &__center
         position: absolute
         left: 176.17px
         top: 16.54px
 
-    &-right
+    &__right
         position: absolute
         right: 16.39px
         top: 17.5px
@@ -174,7 +174,7 @@
     cursor: pointer
     animation: animate-TheStory 1s ease infinite
 
-    &-text
+    &__text
         font-family: OpenSans
         font-style: bold
         font-size: 15px
@@ -182,7 +182,7 @@
         text-transform: uppercase
         white-space: nowrap
 
-    &-img
+    &__img
         position: absolute
         left: 42%
 
