--- a/figma/SOS/sass/sectionFive-NEW.sass
+++ b/figma/SOS/sass/sectionFive-NEW.sass
@@ -7,7 +7,7 @@
     background-size: contain
     position: relative
 
-.SOS-s5-wrapper
+.SOS-s5__wrapper
     display: flex
     justify-content: space-around
 
@@ -49,7 +49,7 @@
         background: linear-gradient(#fc9804, #d39013)
         border: 1.5px solid darkred
 
-    &-text
+    &__text
         color: black
         font-weight: 700
         font-size: 16px
@@ -163,7 +163,7 @@
     transition: 0.5s
 
 @media (max-width: 1100px)
-    .SOS-s5-wrapper
+    .SOS-s5__wrapper
         display: block
 
     .SOS-s5-left
@@ -178,10 +178,11 @@
             text-align: center
 
         .s5h1-text
+            text-align: center
             padding-top: 20px
             margin: 0 auto
 
-        .Read-more-inner
+        .Read-more__inner
             display: block
             margin-top: 20px
 
