--- a/sass/style.sass
+++ b/sass/style.sass
@@ -29,12 +29,13 @@
 @import "../app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS"
 @import "../app/TicTacToe/sass/TicTacToe"
 @import "../figma/SOS/sass/sectionOne"
-@import "../figma/SOS/sass/sectionTwo"
+// @import "../figma/SOS/sass/sectionTwo"
 @import "../figma/SOS/sass/sectionThree"
 @import "../figma/SOS/sass/sectionFour"
 /** @import "../figma/SOS/sass/sectionFive" **/
 @import "../figma/SOS/sass/sectionSix"
 @import "../figma/SOS/sass/sectionFive-NEW"
+@import "../figma/SOS/sass/sectionTwoNew.sass"
 
 @import "../figma/ZEN/sass/ZenGlobal"
 @import "../figma/ZEN/sass/section1"
