--- a/css/style.css
+++ b/css/style.css
@@ -1557,12 +1557,14 @@ label::before {
   right: 40px;
   width: 40px;
   height: 40px;
+  z-index: 100;
 }
 
 @media (max-width: 400px) {
   .pageUp {
     bottom: 12px;
     right: 12px;
+    z-index: 100;
   }
 }
 html:hover .spider {
@@ -2973,6 +2975,7 @@ html:hover .spider {
   background-size: cover;
 }
 .SectionTwo .h1up {
+  margin-top: 250px;
   color: white;
   text-transform: uppercase;
   font-size: 24px;
@@ -2981,7 +2984,6 @@ html:hover .spider {
 .SectionTwo .h1Main {
   color: white;
   text-transform: uppercase;
-  font-size: 50px;
   line-height: 80px;
   width: 600px;
   font-weight: 700;
@@ -3002,14 +3004,16 @@ html:hover .spider {
 .about-game {
   display: flex;
   justify-content: space-between;
-  margin-top: 150px;
 }
 .about-game__wrapper {
-  width: 100%;
+  display: block;
+  margin: 0 auto;
+  width: 80%;
   height: 100%;
 }
 
 .slider {
+  margin-top: 187px;
   width: 600px;
   height: 600px;
   position: relative;
@@ -3073,6 +3077,86 @@ html:hover .spider {
   cursor: pointer;
 }
 
+@media (max-width: 1275px) {
+  .SectionTwo {
+    min-width: 100%;
+    min-height: 100%;
+  }
+
+  .about-game {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  .about-game__wrapper {
+    width: 100%;
+  }
+  .about-game .about-game__left {
+    margin: 0 auto;
+  }
+  .about-game .about-game__left .h1up {
+    text-align: center;
+  }
+  .about-game .about-game__left .h1Main {
+    text-align: center;
+    margin: 0 auto;
+  }
+  .about-game .about-game__left .textSectionTwo {
+    margin: 0 auto;
+  }
+  .about-game .slider {
+    margin: 0 auto;
+    padding-left: 55px;
+  }
+}
+@media (max-width: 600px) {
+  .about-game__left {
+    width: 100%;
+  }
+  .about-game__left .h1up {
+    text-align: center;
+    margin-top: 36px;
+  }
+  .about-game__left .h1Main {
+    width: 100% !important;
+    padding: 15px;
+    color: rgba(255, 181, 72, 0.9) !important;
+  }
+  .about-game__left .h1Main-text {
+    line-height: 50px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 45px;
+    margin: 0 auto;
+  }
+
+  .textSectionTwo {
+    width: 100% !important;
+    padding: 15px;
+  }
+
+  .slider__photo_1 {
+    width: 70%;
+    height: 70%;
+  }
+
+  .slider__photo_2 {
+    width: 70%;
+    height: 70%;
+  }
+
+  .slider__photo_3 {
+    width: 70%;
+    height: 70%;
+    left: 85px;
+  }
+}
+@media (max-width: 500px) {
+  .slider-wrapper {
+    width: 100%;
+    height: 600px;
+  }
+}
 html {
   box-sizing: border-box;
 }
