--- a/sass/Global/pageUp.sass
+++ b/sass/Global/pageUp.sass
@@ -5,8 +5,10 @@
     right: 40px
     width: 40px
     height: 40px
+    z-index: 100
 
 @media ( max-width: 400px )
     .pageUp
         bottom: 12px
         right: 12px
+        z-index: 100
