--- a/figma/SOS/sass/sectionTwoNew.sass
+++ b/figma/SOS/sass/sectionTwoNew.sass
@@ -111,13 +111,17 @@
         min-width: 100%
         min-height: 100%
 
+    .slider-wrapper
+        margin: 0 auto
+
     .about-game
         display: flex
         align-items: flex-start
         flex-direction: column
+        justify-content: center
 
-        &__wrapper
-            width: 100%
+        &-wrapper
+            margin: 0 auto
 
         .about-game__left
             margin: 0 auto
@@ -129,6 +133,9 @@
                 text-align: center
                 margin: 0 auto
 
+                &-text
+                    line-height: 65px
+
             .textSectionTwo
                 margin: 0 auto
 
@@ -137,6 +144,10 @@
             padding-left: 55px
 
 @media (max-width: 600px)
+    .about-game__wrapper
+        min-height: 100%
+        min-width: 100%
+
     .about-game__left
         width: 100%
 
@@ -150,7 +161,7 @@
             color: rgba(255, 181, 72, 0.9) !important
 
         .h1Main-text
-            line-height: 50px
+            line-height: 45px !important
             text-align: center
             font-weight: 700
             font-size: 45px
@@ -161,19 +172,34 @@
         padding: 15px
 
     .slider__photo_1
-        width: 70%
-        height: 70%
+        position: static !important
+        width: auto
+        max-height: 70%
+        z-index: 7
+        img
+            object-fit: cover
 
     .slider__photo_2
-        width: 70%
-        height: 70%
+        width: 20%
+        height: 20%
+        display: none
 
     .slider__photo_3
-        width: 70%
-        height: 70%
-        left: 85px
+        width: 20%
+        height: 20%
+        display: none
 
-@media (max-width: 500px)
+    .slider__switcher
+        display: none
+
     .slider-wrapper
+        display: block
+        width: none
+        height: none
+
+    .slider
+        display: block
         width: 100%
-        height: 600px
+        height: 100%
+        margin: 0 auto
+        padding: 15px !important
