--- a/figma/SOS/sass/sectionTwo.sass
+++ b/figma/SOS/sass/sectionTwo.sass
@@ -1,28 +1,25 @@
 .SectionTwo
-    min-weight: 1000px
+    min-width: 1000px
     min-height: 1100px
     background-repeat: no-repeat
     display: block
     background-position: center
     background-size: contain
     position: relative
+    background-image: url(../figma/SOS/img/bg-image-2.jpg)
+    background-size: cover
 
     .h1up
-        position: absolute
+        margin-top: 250px
+
         color: white
         text-transform: uppercase
-        top: 25%
-        left: 12%
         font-size: 24px
         font-family: Bebas Neue
 
     .h1Main
-        position: absolute
         color: white
         text-transform: uppercase
-        font-size: 50px
-        top: 28%
-        left: 12%
         line-height: 80px
         width: 600px
         font-weight: 700
@@ -30,109 +27,179 @@
         font-family: Bebas Neue
 
     .textSectionTwo
-        position: absolute
         color: white
-        top: 48%
-        left: 24%
         font-size: 18px
         width: 360px
         text-align: justify
         font-weight: 400
         line-height: 22px
         font-family: Open Sans
+        margin: 50px 0 0 110px
 
-.photo1
-    position: absolute
-    top: 15%
-    left: 55%
-    z-index: 3
-    cursor: pointer
+.about-game
+    display: flex
+    justify-content: space-between
 
-    img
-        width: 490px
-        height: 600px
+    &__wrapper
+        display: block
+        margin: 0 auto
+        width: 80%
+        height: 100%
 
-.photo2
-    position: absolute
-    top: 17%
-    left: 59%
-    z-index: 2
-    cursor: pointer
-    img
-        width: 450px
-        height: 550px
+.slider
+    margin-top: 187px
+    width: 600px
+    height: 600px
+    position: relative
 
-.photo3
-    position: absolute
-    top: 19%
-    left: 64%
-    cursor: pointer
-    img
-        width: 400px
+    &__photo
+        padding: 0
+
+    &__photo img
+        height: 100%
+        width: 100%
+
+    &__photo_1
+        position: absolute
         height: 500px
+        width: 450px
+        z-index: 2
 
-.switch-img
+    &__point-switcher
+        margin-top: -60px
+
+.point-switcher
+    display: flex
+    justify-content: center
+
+    &__item
+        margin: 0 25px
+        width: 14px
+        height: 14px
+        border: 1px solid white
+        border-radius: 50%
+        z-index: 4
+        cursor: pointer
+
+    &__item_active
+        background-color: white
+
+.slider__photo_2
     position: absolute
-    top: 42%
-    right: 12%
+    top: 30px
+    left: 70px
+    height: 460px
+    width: 410px
+    z-index: 1
+
+.slider__photo_3
+    position: absolute
+    top: 40px
+    left: 130px
+    height: 420px
+    width: 370px
+    z-index: 0
+
+.slider__switcher
+    position: absolute
+    left: 510px
+    top: 231px
     cursor: pointer
 
-.point1
-    position: absolute
-    top: 65%
-    left: 60%
-    width: 14px
-    height: 14px
-    background-color: white
-    border: 1px solid white
-    border-radius: 50%
-    z-index: 4
-    cursor: pointer
+@media (max-width: 1275px)
+    .SectionTwo
+        min-width: 100%
+        min-height: 100%
 
-.point2
-    position: absolute
-    top: 65%
-    left: 64%
-    width: 14px
-    height: 14px
-    background-color: transparent
-    border: 1px solid white
-    border-radius: 50%
-    z-index: 4
-    cursor: pointer
+    .slider-wrapper
+        margin: 0 auto
 
-.point3
-    position: absolute
-    top: 65%
-    left: 68%
-    width: 14px
-    height: 14px
-    background-color: transparent
-    border: 1px solid white
-    border-radius: 50%
-    z-index: 4
-    cursor: pointer
+    .about-game
+        display: flex
+        align-items: flex-start
+        flex-direction: column
+        justify-content: center
 
-.point4
-    position: absolute
-    top: 65%
-    left: 72%
-    width: 14px
-    height: 14px
-    background-color: transparent
-    border: 1px solid white
-    border-radius: 50%
-    z-index: 4
-    cursor: pointer
+        &-wrapper
+            margin: 0 auto
 
-.point5
-    position: absolute
-    top: 65%
-    left: 76%
-    width: 14px
-    height: 14px
-    background-color: transparent
-    border: 1px solid white
-    border-radius: 50%
-    z-index: 4
-    cursor: pointer
+        .about-game__left
+            margin: 0 auto
+
+            .h1up
+                text-align: center
+
+            .h1Main
+                text-align: center
+                margin: 0 auto
+
+                &-text
+                    line-height: 65px
+
+            .textSectionTwo
+                margin: 0 auto
+
+        .slider
+            margin: 0 auto
+            padding-left: 55px
+
+@media (max-width: 600px)
+    .about-game__wrapper
+        min-height: 100%
+        min-width: 100%
+
+    .about-game__left
+        width: 100%
+
+        .h1up
+            text-align: center
+            margin-top: 36px
+
+        .h1Main
+            width: 100% !important
+            padding: 15px
+            color: rgba(255, 181, 72, 0.9) !important
+
+        .h1Main-text
+            line-height: 45px !important
+            text-align: center
+            font-weight: 700
+            font-size: 45px
+            margin: 0 auto
+
+    .textSectionTwo
+        width: 100% !important
+        padding: 15px
+
+    .slider__photo_1
+        position: static !important
+        width: auto
+        max-height: 70%
+        z-index: 7
+        img
+            object-fit: cover
+
+    .slider__photo_2
+        width: 20%
+        height: 20%
+        display: none
+
+    .slider__photo_3
+        width: 20%
+        height: 20%
+        display: none
+
+    .slider__switcher
+        display: none
+
+    .slider-wrapper
+        display: block
+        width: none
+        height: none
+
+    .slider
+        display: block
+        width: 100%
+        height: 100%
+        margin: 0 auto
+        padding: 15px !important
