--- a/figma/SOS/sass/sectionFive-NEW.sass
+++ b/figma/SOS/sass/sectionFive-NEW.sass
@@ -10,6 +10,8 @@
 .SOS-s5__wrapper
     display: flex
     justify-content: space-around
+    width: 80%
+    margin: 0 auto
 
 .s5h1-up
     margin-top: 304px
@@ -57,7 +59,7 @@
         font-family: Open Sans
 
 .SOS-s5-right
-    margin-top: 150px
+    margin-top: 110px
 
 .evanSOS
     height: 183px
