--- a/css/style.css
+++ b/css/style.css
@@ -2251,17 +2251,48 @@ html:hover .spider {
   font-style: normal;
 }
 
+.SOS-s3-menu__inner {
+  margin-top: 80px;
+  display: flex;
+  justify-content: space-between;
+}
+.SOS-s3-menu__inner .SOS-s3__points {
+  padding-right: 20px;
+}
+.SOS-s3-menu__inner .SOS-s3__points .point {
+  width: 24px;
+  height: 24px;
+  border: 1px solid #FFF;
+  border-radius: 12px;
+}
+.SOS-s3-menu__inner .SOS-s3__points .point-One {
+  margin-top: 14px;
+}
+.SOS-s3-menu__inner .SOS-s3__points .line-S3 {
+  margin-left: 7px;
+  min-height: 33px;
+  width: 7px;
+  background-color: white;
+}
+
 .s3block1 {
   cursor: pointer;
 }
 .s3block1 .s3h1 {
-  margin-top: 80px;
   color: #ffb548;
   font-size: 36px;
   font-weight: 700;
   font-family: Bebas Neue;
   padding: 10px 0;
   line-height: 36px;
+}
+.s3block1 .s3h1::before {
+  content: "";
+  border: 2px solid #FFF;
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  border-radius: 12px;
 }
 .s3block1 .s3text1 {
   width: 360px;
@@ -2271,6 +2302,7 @@ html:hover .spider {
   font-family: Open Sans;
   font-size: 19px;
   text-align: justify;
+  margin-left: 32px;
 }
 
 .s3block2 {
@@ -2284,6 +2316,14 @@ html:hover .spider {
   padding: 10px 0;
   line-height: 36px;
 }
+.s3block2 .s3h2::before {
+  content: "";
+  border: 2px solid #FFF;
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  border-radius: 12px;
+}
 .s3block2 .s3text2 {
   width: 360px;
   height: 77.7px;
@@ -2292,6 +2332,7 @@ html:hover .spider {
   font-family: Open Sans;
   font-size: 19px;
   text-align: justify;
+  margin-left: 32px;
 }
 
 .s3block3 {
@@ -2305,6 +2346,14 @@ html:hover .spider {
   padding: 10px 0;
   line-height: 36px;
 }
+.s3block3 .s3h3::before {
+  content: "";
+  border: 2px solid #FFF;
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  border-radius: 12px;
+}
 .s3block3 .s3text3 {
   width: 360px;
   height: 77.7px;
@@ -2313,10 +2362,15 @@ html:hover .spider {
   font-family: Open Sans;
   font-size: 19px;
   text-align: justify;
+  margin-left: 32px;
 }
 
-.hidden {
+.SOS-S3__hidden {
   display: none;
+}
+
+.SOS-S3__active::before {
+  background-color: white;
 }
 
 @media (max-width: 930px) {
