--- a/figma/SOS/sass/sectionThree.sass
+++ b/figma/SOS/sass/sectionThree.sass
@@ -33,11 +33,33 @@
     font-size: 80px
     font-style: normal
 
+.SOS-s3-menu__inner
+    margin-top: 80px
+    display: flex
+    justify-content: space-between
+
+    .SOS-s3__points
+        padding-right: 20px
+
+        .point
+            width: 24px
+            height: 24px
+            border: 1px solid #FFF
+            border-radius: 12px
+
+            &-One
+                margin-top: 14px
+
+        .line-S3
+            margin-left: 7px
+            min-height: 33px
+            width: 7px
+            background-color: white
+
 .s3block1
     cursor: pointer
 
-    & .s3h1
-        margin-top: 80px
+    .s3h1
         color: #ffb548
         font-size: 36px
         font-weight: 700
@@ -45,7 +67,15 @@
         padding: 10px 0
         line-height: 36px
 
-    & .s3text1
+        &::before
+            content: ''
+            border: 2px solid #FFF
+            width: 24px
+            height: 24px
+            display: inline-block
+            border-radius: 12px
+
+    .s3text1
         width: 360px
         height: 77.7px
         color: white
@@ -53,6 +83,7 @@
         font-family: Open Sans
         font-size: 19px
         text-align: justify
+        margin-left: 32px
 
 .s3block2
     cursor: pointer
@@ -65,6 +96,14 @@
         padding: 10px 0
         line-height: 36px
 
+        &::before
+            content: ''
+            border: 2px solid #FFF
+            width: 24px
+            height: 24px
+            display: inline-block
+            border-radius: 12px
+
     & .s3text2
         width: 360px
         height: 77.7px
@@ -73,6 +112,7 @@
         font-family: Open Sans
         font-size: 19px
         text-align: justify
+        margin-left: 32px
 
 .s3block3
     cursor: pointer
@@ -85,6 +125,14 @@
         padding: 10px 0
         line-height: 36px
 
+        &::before
+            content: ''
+            border: 2px solid #FFF
+            width: 24px
+            height: 24px
+            display: inline-block
+            border-radius: 12px
+
     & .s3text3
         width: 360px
         height: 77.7px
@@ -93,9 +141,14 @@
         font-family: Open Sans
         font-size: 19px
         text-align: justify
+        margin-left: 32px
 
-.hidden
+.SOS-S3__hidden
     display: none
+
+.SOS-S3__active
+    &::before
+        background-color: white
 
 @media (max-width: 930px)
     .SectionThree
