--- a/figma/SOS/sass/headerSOS.sass
+++ b/figma/SOS/sass/headerSOS.sass
@@ -136,6 +136,24 @@ body.lockSOS
     margin-left: 5px
     margin-right: 5px
 
+.language_drop-down
+    width: 60px
+    height: 80px
+    background-color: rgba(0, 0, 0, 0.5)
+    border-radius: 5px
+
+    li a
+        color: white
+        margin-left: 10px
+        text-transform: uppercase
+        font-size: 12px
+        font-weight: 700
+        transition: 0.5s
+        cursor: pointer
+
+        &:hover
+            color: red
+
 .headerSOS-RIGHT-button
     width: 200px
     cursor: pointer
