--- a/css/style.css
+++ b/css/style.css
@@ -4393,6 +4393,10 @@ body.lockSOS {
   color: red;
 }
 
+.language-wrapper:hover .language_drop-down {
+  display: block;
+}
+
 .language-arrow {
   margin-left: 5px;
   margin-right: 5px;
@@ -4403,6 +4407,8 @@ body.lockSOS {
   height: 80px;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 5px;
+  position: absolute;
+  display: none;
 }
 .language_drop-down li a {
   color: white;
