--- a/figma/SOS/sass/headerSOS.sass
+++ b/figma/SOS/sass/headerSOS.sass
@@ -132,6 +132,9 @@ body.lockSOS
 .language:hover
     color: red
 
+.language-wrapper:hover .language_drop-down
+    display: block
+
 .language-arrow
     margin-left: 5px
     margin-right: 5px
@@ -141,6 +144,8 @@ body.lockSOS
     height: 80px
     background-color: rgba(0, 0, 0, 0.5)
     border-radius: 5px
+    position: absolute
+    display: none
 
     li a
         color: white
