fix SOS section6

--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -61,7 +61,7 @@
     flex-wrap: wrap
 
 .email
-    width: 467px
+    width: 600px
     height: 60px
     background: rgba(255, 255, 255, 0.1)
     border-radius: 5px
@@ -125,6 +125,14 @@
 
             100%
                 transform: scale(1.2)
+
+@media (max-width: 1800px)
+    .email
+        width: 450px
+
+@media (max-width: 1530px)
+    .email
+        width: 300px
 
 @media (max-width: 1300px)
     .SectionSix
