--- a/css/style.css
+++ b/css/style.css
@@ -2734,7 +2734,7 @@ html:hover .spider {
 }
 
 .email {
-  width: 467px;
+  width: 600px;
   height: 60px;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 5px;
@@ -2800,6 +2800,16 @@ html:hover .spider {
   }
 }
 
+@media (max-width: 1800px) {
+  .email {
+    width: 450px;
+  }
+}
+@media (max-width: 1530px) {
+  .email {
+    width: 300px;
+  }
+}
 @media (max-width: 1300px) {
   .SectionSix {
     width: auto;
