--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -207,3 +207,15 @@
 
     .the-story
         margin-top: 500px
+
+@media (max-width: 330px)
+
+    @keyframes animate-TheStory
+        0%
+            margin-top: 470px
+
+        50%
+            margin-top: 440px
+
+        100%
+            margin-top: 470px
