--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -153,10 +153,20 @@
             width: 250px
             height: 50%
 
-@media (max-width: 700px)
+@media (max-width: 900px)
+    .SOS-S6-inner
+        justify-content: center
+
+    .SOS-S6-wrapper
+        width: 100%
+        display: flex
+
     .SOSemail-wrapper
         display: flex
         justify-content: center
+        width: 100%
+        flex-direction: column
+        align-items: center
 
         .ButtonSubscribe
             margin-top: 20px
@@ -167,24 +177,42 @@
 
     .SOS-s6-right
         width: 100%
+        align-items: center
+        flex-direction: column
 
     .s6h1-up
         display: block
         font-size: 18px
-        width: 80%
+        width: 100%
         text-align: center
+        padding: 7px
 
     .s6h1-main
         display: block
         font-size: 30px
-        width: 80%
+        width: 100%
         line-height: 30px
         text-align: center
+        padding: 7px
 
     .s6h1-text
         display: block
         text-align: center
-        width: 80%
+        width: 90%
+        padding: 7px
+        margin: 0 auto
 
         .ButtonSubscribe
             margin: 0 auto
+
+    .SOS-s6-right
+        width: 100%
+
+    .s6h1-up
+        padding: 7px
+
+    .s6h1-main
+        padding: 7px
+
+    .s6h1-text
+        padding: 7px
