--- a/css/style.css
+++ b/css/style.css
@@ -2419,6 +2419,11 @@ html:hover .spider {
     margin-left: 20px;
   }
 }
+@media (max-width: 620px) {
+  .S3-h1main-text {
+    font-size: 70px;
+  }
+}
 .SectionFour {
   min-weight: 1000px;
   min-height: 880px;
@@ -2845,10 +2850,22 @@ html:hover .spider {
     height: 50%;
   }
 }
-@media (max-width: 700px) {
+@media (max-width: 900px) {
+  .SOS-S6-inner {
+    justify-content: center;
+  }
+
+  .SOS-S6-wrapper {
+    width: 100%;
+    display: flex;
+  }
+
   .SOSemail-wrapper {
     display: flex;
     justify-content: center;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
   }
   .SOSemail-wrapper .ButtonSubscribe {
     margin-top: 20px;
@@ -2861,30 +2878,52 @@ html:hover .spider {
 
   .SOS-s6-right {
     width: 100%;
+    align-items: center;
+    flex-direction: column;
   }
 
   .s6h1-up {
     display: block;
     font-size: 18px;
-    width: 80%;
+    width: 100%;
     text-align: center;
+    padding: 7px;
   }
 
   .s6h1-main {
     display: block;
     font-size: 30px;
-    width: 80%;
+    width: 100%;
     line-height: 30px;
     text-align: center;
+    padding: 7px;
   }
 
   .s6h1-text {
     display: block;
     text-align: center;
-    width: 80%;
+    width: 90%;
+    padding: 7px;
+    margin: 0 auto;
   }
   .s6h1-text .ButtonSubscribe {
     margin: 0 auto;
+  }
+
+  .SOS-s6-right {
+    width: 100%;
+  }
+
+  .s6h1-up {
+    padding: 7px;
+  }
+
+  .s6h1-main {
+    padding: 7px;
+  }
+
+  .s6h1-text {
+    padding: 7px;
   }
 }
 .SectionFive {
@@ -4273,9 +4312,19 @@ body.lockZEN {
     flex-wrap: wrap;
   }
 }
+@media (max-width: 390px) {
+  .footer-wrapper {
+    margin-top: 120px;
+  }
+}
 @media (max-width: 350px) {
   .footer-wrapper {
-    margin-top: 100px;
+    margin-top: 140px;
+  }
+}
+@media (max-width: 330px) {
+  .footer-wrapper {
+    padding-top: 10px;
   }
 }
 *,
