--- a/figma/SOS/sass/footerSOS.sass
+++ b/figma/SOS/sass/footerSOS.sass
@@ -137,6 +137,14 @@
         .footer-up-imgs
             flex-wrap: wrap
 
+@media (max-width: 390px)
+    .footer-wrapper
+        margin-top: 120px
+
 @media (max-width: 350px)
     .footer-wrapper
-        margin-top: 100px
+        margin-top: 140px
+
+@media (max-width: 330px)
+    .footer-wrapper
+        padding-top: 10px
