--- a/css/style.css
+++ b/css/style.css
@@ -2388,7 +2388,8 @@ html:hover .spider {
 
 @media (max-width: 930px) {
   .SectionThree {
-    min-height: max-content;
+    min-width: 100%;
+    min-height: 100%;
   }
 
   .S3-h1up-text {
@@ -2413,15 +2414,95 @@ html:hover .spider {
 
   .S3-h1up-text {
     width: 100%;
+    text-align: center;
   }
 
   .S3-h1main {
     margin-left: 20px;
+    text-align: center;
+  }
+
+  .s3h1 {
+    font-size: 30px !important;
+  }
+
+  .s3h2 {
+    font-size: 30px !important;
+  }
+
+  .s3h3 {
+    font-size: 30px !important;
   }
 }
 @media (max-width: 620px) {
   .S3-h1main-text {
     font-size: 70px;
+  }
+}
+@media (max-width: 580px) {
+  .S3-h1up-text {
+    margin-left: 0;
+  }
+
+  .s3h1 {
+    font-size: 25px !important;
+  }
+
+  .s3h2 {
+    font-size: 25px !important;
+  }
+
+  .s3h3 {
+    font-size: 25px !important;
+  }
+}
+@media (max-width: 493px) {
+  .s3text1 {
+    margin-left: 0 !important;
+  }
+
+  .s3text2 {
+    margin-left: 0 !important;
+  }
+
+  .s3text3 {
+    margin-left: 0 !important;
+  }
+}
+@media (max-width: 440px) {
+  .S3-h1main-text {
+    font-size: 50px;
+  }
+
+  .S3-h1up-text {
+    margin-left: 0;
+  }
+}
+@media (max-width: 440px) {
+  .SOS-S3-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .S3-h1main {
+    margin-left: 0;
+  }
+
+  .s3text1 {
+    width: 100% !important;
+    height: 100% !important;
+  }
+
+  .s3text2 {
+    width: 100% !important;
+    height: 100% !important;
+  }
+
+  .s3text3 {
+    width: 100% !important;
+    height: 100% !important;
   }
 }
 .SectionFour {
