--- a/figma/SOS/sass/footerSOS.sass
+++ b/figma/SOS/sass/footerSOS.sass
@@ -11,6 +11,7 @@
             width: 180px
             height: 90px
             padding-right: 90px
+            border-radius: 0
 
     .footer-up-imgs
         i
