--- a/figma/ZEN/sass/ZenGlobal.sass
+++ b/figma/ZEN/sass/ZenGlobal.sass
@@ -35,6 +35,12 @@ html
     img
         height: 100%
         width: 100%
+        object-fit: cover
+
+@media ( max-width: 1428px)
+    .sectionZEN-common
+        display: flex
+        flex-direction: column
 
 @media ( max-width: 1050px)
     .containerZEN
@@ -45,7 +51,7 @@ html
         position: absolute
         img
             max-height: 100%
-            max-weight: 100%
+            max-width: 100%
 
     .sectionZEN-common-text
         margin: 0 auto
