--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -1,6 +1,6 @@
 .SectionOne
-    min-weight: 1000px
-    min-height: 1100px
+    min-weight: auto
+    min-height: 100vh
     background-repeat: no-repeat
     display: block
     background-position: center
@@ -11,7 +11,6 @@
     display: flex
     flex-direction: column
     justify-content: space-between
-    position: relative
 
 .header-inner
     margin: 0 auto
@@ -165,13 +164,14 @@
         font-weight: 700
 
 .the-story
-    position: relative
+    position: absolute
     width: 68px
     height: 25px
     margin: 0 auto
-    margin-top: 560px
-    margin-button: 20px
     cursor: pointer
+    left: 50%
+    bottom: 7%
+    transform: translate(-50%, -50%)
     animation: animate-TheStory 1s ease infinite
 
     &__text
@@ -188,13 +188,12 @@
 
 @keyframes animate-TheStory
     0%
-        margin-top: 550px
+        bottom: 7%
 
     50%
-        margin-top: 540px
-
+        bottom: 9%
     100%
-        margin-top: 550px
+        ottom: 7%
 
 @media (max-width: 930px)
     .Main-title
