--- a/css/style.css
+++ b/css/style.css
@@ -4302,6 +4302,7 @@ body.lockZEN {
   transition: 0.5s;
   font-weight: 700;
   position: relative;
+  cursor: pointer;
 }
 .footer-menu a:hover {
   color: red;
