--- a/figma/SOS/sass/footerSOS.sass
+++ b/figma/SOS/sass/footerSOS.sass
@@ -76,6 +76,7 @@
         transition: 0.5s
         font-weight: 700
         position: relative
+        cursor: pointer
 
         &:hover
             color: red
