--- a/css/style.css
+++ b/css/style.css
@@ -3493,6 +3493,22 @@ html:hover .spider {
     padding: 15px !important;
   }
 }
+.backgrounds {
+  min-width: 100%;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  display: block;
+  background-position: center;
+  background-size: contain;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -10;
+  background-repeat: no-repeat;
+  background-image: url(../figma/SOS/img/background/bg-image-2-min.jpg);
+  background-size: cover;
+}
+
 html {
   box-sizing: border-box;
 }
