--- a/sass/style.sass
+++ b/sass/style.sass
@@ -36,6 +36,7 @@
 @import "../figma/SOS/sass/sectionSix"
 @import "../figma/SOS/sass/sectionFive-NEW"
 @import "../figma/SOS/sass/sectionTwo.sass"
+@import "../figma/SOS/sass/backgrounds"
 
 @import "../figma/ZEN/sass/ZenGlobal"
 @import "../figma/ZEN/sass/section1"
