--- a/figma/SOS/sass/backgrounds.sass
+++ b/figma/SOS/sass/backgrounds.sass
@@ -30,6 +30,7 @@
         background-image: url(../figma/SOS/img/background/bg-image-3-min.jpg)
         background-size: cover
         background-position: 70% 0%
+        height: 700px
 
     .SectionFour
         background-image: url(../figma/SOS/img/background/bg-image-4-min.jpg)
