--- a/css/style.css
+++ b/css/style.css
@@ -3529,6 +3529,7 @@ html:hover .spider {
     background-image: url(../figma/SOS/img/background/bg-image-3-min.jpg);
     background-size: cover;
     background-position: 70% 0%;
+    height: 700px;
   }
 
   .SectionFour {
